--- a/project-manage-system-backend/project-manage-system-backend.csproj
+++ b/project-manage-system-backend/project-manage-system-backend.csproj
@@ -22,5 +22,11 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="PMS_Database.db">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
